// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om deg og avdød Snapshot med sivilstatus samboer 1`] = `
<div>
  <div
    class="sc-gsTDqH kXeStq"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
  </div>
  <form>
    <fieldset
      class="sc-dlfmHC UAsZH"
    >
      <div
        id="forholdTilAvdoede.relasjon"
      >
        <fieldset
          class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            omDegOgAvdoed.forholdTilAvdoede.relasjon
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rb"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.gift"
              />
              <label
                class="navds-radio__label"
                for="radio-rb"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.gift
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rc"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.separert"
              />
              <label
                class="navds-radio__label"
                for="radio-rc"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.separert
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-rd"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.samboer"
              />
              <label
                class="navds-radio__label"
                for="radio-rd"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.samboer
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-re"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.skilt"
              />
              <label
                class="navds-radio__label"
                for="radio-re"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.skilt
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-ra"
          />
        </fieldset>
      </div>
      <div
        class="sc-gsTDqH kXeStq"
      >
        <section
          class="sc-bdfCDU kPlLYV"
        >
          <div
            class="datepicker"
          >
            <div>
              <div
                class="ds-datepicker"
              >
                <div
                  class="navds-form-field navds-form-field--medium"
                >
                  <label
                    class="navds-form-field__label navds-label"
                    for="forholdTilAvdoede.datoForInngaattSamboerskap"
                  >
                    omDegOgAvdoed.forholdTilAvdoede.datoForInngaattSamboerskap
                  </label>
                  <div
                    class="navds-form-field__description navds-body-short navds-body-short--small"
                    id="textField-description-ri"
                  >
                    felles.oppgiDato felles.datoformat
                  </div>
                  <div
                    style="position: relative;"
                  >
                    <input
                      aria-describedby="textField-description-ri"
                      autocomplete="off"
                      autocorrect="off"
                      class="navds-text-field__input navds-body-short navds-body-medium"
                      id="forholdTilAvdoede.datoForInngaattSamboerskap"
                      inputmode="text"
                      maxlength="10"
                      name="forholdTilAvdoede.datoForInngaattSamboerskap"
                      type="text"
                      value=""
                    />
                    <button
                      aria-expanded="false"
                      class="ds-datepicker__calendarButton ds-datepicker__calendarButton--medium"
                      type="button"
                    >
                      <span
                        class="sr-only"
                      >
                        Kalender
                      </span>
                      <span
                        aria-hidden="true"
                        class="ds-datepicker__calendarButton__icon"
                      >
                        <svg
                          focusable="false"
                          height="16"
                          role="presentation"
                          style="pointer-events: none;"
                          viewBox="0 0 18 18"
                          width="16"
                        >
                          <title>
                            Kalenderikon
                          </title>
                          <g
                            fill="none"
                            fill-rule="evenodd"
                            stroke="#0067C5"
                          >
                            <path
                              d="M4 2.667H1.333v14h15.334v-14H14"
                            />
                            <path
                              d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                            />
                          </g>
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    aria-live="polite"
                    aria-relevant="additions removals"
                    class="navds-form-field__error"
                    id="textField-error-ri"
                  />
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="sc-gsTDqH kXeStq"
      >
        <div
          id="forholdTilAvdoede.fellesBarn"
        >
          <fieldset
            aria-describedby="fieldset-description-rk"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              omDegOgAvdoed.forholdTilAvdoede.fellesBarn
            </legend>
            <div
              class="navds-fieldset__description navds-body-short navds-body-short--medium"
              id="fieldset-description-rk"
            >
              omDegOgAvdoed.forholdTilAvdoede.fellesBarn.beskrivelse
            </div>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rl"
                  name="forholdTilAvdoede.fellesBarn"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rl"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  class="navds-radio__input"
                  id="radio-rm"
                  name="forholdTilAvdoede.fellesBarn"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rm"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short navds-body-short--medium"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-rk"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-dlfmHC UAsZH"
    >
      <div
        class="sc-hKgKIp jZdyrG undefined"
      >
        <button
          class="navds-button navds-button--secondary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-hKgKIp sc-eCstZk jZdyrG dKRciV"
    >
      <button
        class="navds-button navds-button--tertiary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-rh"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-rh"
              >
                Lukk modalvindu
              </title>
              <path
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-iqHXzD dUPgBl"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-iqHXzD dUPgBl"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;

exports[`Om deg og avdød Snapshot uten samboerskjema 1`] = `
<div>
  <div
    class="sc-gsTDqH kXeStq"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
  </div>
  <form>
    <fieldset
      class="sc-dlfmHC UAsZH"
    >
      <div
        id="forholdTilAvdoede.relasjon"
      >
        <fieldset
          class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            omDegOgAvdoed.forholdTilAvdoede.relasjon
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r2"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.gift"
              />
              <label
                class="navds-radio__label"
                for="radio-r2"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.gift
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r3"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.separert"
              />
              <label
                class="navds-radio__label"
                for="radio-r3"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.separert
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r4"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.samboer"
              />
              <label
                class="navds-radio__label"
                for="radio-r4"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.samboer
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                class="navds-radio__input"
                id="radio-r5"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.skilt"
              />
              <label
                class="navds-radio__label"
                for="radio-r5"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short navds-body-short--medium"
                  >
                    avdoede.relasjon.skilt
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-r1"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-dlfmHC UAsZH"
    >
      <div
        class="sc-hKgKIp jZdyrG undefined"
      >
        <button
          class="navds-button navds-button--secondary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-hKgKIp sc-eCstZk jZdyrG dKRciV"
    >
      <button
        class="navds-button navds-button--tertiary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-r8"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r8"
              >
                Lukk modalvindu
              </title>
              <path
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-iqHXzD dUPgBl"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-iqHXzD dUPgBl"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;
